# rewire-beacon

./: .env.example  .gitignore  BEACON.md  CANONICAL_DOC.md  MESSAGING.md  README.md  capabilities.yaml  prompt_lovable_simplificacao.md  pyproject.toml
apps/control-plane/: Dockerfile  alembic.ini  conftest.py  pyproject.toml
apps/control-plane/migrations/: env.py
apps/control-plane/migrations/versions/: 0001_initial.py  0002_expand_schema.py  0003_rls_force.py  0004_beacon_worker_role.py  0005_pgmq_queues.py  0006_rls_fail_closed.py
apps/control-plane/src/beacon/: __init__.py  clickhouse_schema.sql  main.py  red_middleware.py  settings.py
apps/control-plane/src/beacon/agents/: __init__.py  agent_bus_client.py  agent_bus_rmq.py  agent_invoke_router.py  capabilities_router.py  capability_loader.py  handlers.py
apps/control-plane/src/beacon/api/: __init__.py  ab_tests.py  analytics.py  antispam.py  api_tokens.py  billing.py  chain.py  deliverability.py  deliveries.py  domains.py  internal_dsar.py  journeys.py  lgpd.py  messages.py  notifications.py  overview.py  push_apps.py  segments.py  settings.py  sms_numbers.py  suppression.py  team.py  templates.py  unsubscribe.py  webhooks.py  webhooks_inbound.py  webhooks_mgmt.py  webpush_subs.py  whatsapp.py
apps/control-plane/src/beacon/db/: __init__.py  chaos_wiring.py  models.py  session.py
apps/control-plane/src/beacon/integrations/: __init__.py  apns.py  asaas.py  aws_ses_br.py  clickhouse.py  connect.py  fcm.py  lago.py  nfeio.py  postal.py  resend.py  totalvoice.py  webpush.py  zenvia.py
apps/control-plane/src/beacon/middleware/: __init__.py  auth.py  idempotency.py  tenancy.py
apps/control-plane/src/beacon/services/: __init__.py  antispam.py  api_tokens.py  audit_chain.py  domains.py  messaging.py  pricing.py  quiet_hours.py  suppression.py  template_rendering.py  vapid.py
apps/control-plane/src/beacon/workers/: __init__.py  bad_token_cleanup.py  email_sender.py  push_sender.py  sms_sender.py  usage_reporter.py  whatsapp_sender.py  whatsapp_template_sync.py
apps/control-plane/src/beacon/workflows/: __init__.py  multi_channel_journey.py
apps/control-plane/src/messaging_cp/: __init__.py  credits_emit.py  lago_emit.py  main.py  send_guards.py  worker_main.py
apps/control-plane/src/messaging_cp/adapters/: __init__.py  _circuit.py
apps/control-plane/src/messaging_cp/adapters/email/: __init__.py  postal.py  resend.py  router.py
apps/control-plane/src/messaging_cp/adapters/push/: __init__.py  apns.py  fcm.py  router.py
apps/control-plane/src/messaging_cp/adapters/sms/: __init__.py  router.py  zenvia.py
apps/control-plane/src/messaging_cp/api/: __init__.py
apps/control-plane/src/messaging_cp/api/v1/: __init__.py  emails.py  push.py  sms.py  templates.py  webhooks.py
apps/control-plane/src/messaging_cp/queues/: __init__.py  retry_worker.py  sender_worker.py
apps/control-plane/tests/unit/: test_agent_invoke_auth.py  test_auth_middleware.py  test_canonical_send_guards.py  test_internal_dsar.py  test_internal_dsar_real_tables.py  test_rls_fail_closed.py
cluster/: authentik.yaml  external-secrets.yaml  networking.yaml  observability.yaml  storage.yaml
docs/: 00-overview.md  02-architecture.md
docs/adr/: README.md  (+7 more)
legacy/notify/: Dockerfile  NOTIFY.md  README.md  pyproject.toml
legacy/notify/deploy/argocd/: application.yaml
legacy/notify/deploy/helm/rewire-notify/: Chart.yaml  values.yaml
legacy/notify/deploy/helm/rewire-notify/templates/: deployment.yaml
legacy/notify/docs/adr/: 0000-template.md  0001-telegram-v0-1-bot-api.md  0002-12-event-kinds-canonical.md  0003-redpanda-kafka-consumer.md  0004-hmac-alertmanager-opt-in.md  0005-daily-digest-apscheduler.md  0006-bot-command-poller-long-poll.md  0007-external-secret-vault-telegram.md  0008-argocd-observability-namespace.md  0009-beacon-v0-2-multi-canal-roadmap.md  0010-cross-product-compat-notify-predecessor.md
legacy/notify/docs/tickets/: README.md
legacy/notify/docs/tickets/phase-0-bootstrap/: NTF-001-scaffold-fastapi-app.md  NTF-002-telegram-adapter.md
legacy/notify/docs/tickets/phase-1-cross-product-compat/: xpc-notify-001-migrate-to-beacon.md
legacy/notify/docs/tickets/phase-1-foundation/: NTF-003-alertmanager-webhook-intake.md  NTF-004-kafka-consumer-cluster-events.md  NTF-005-producer-events-cross-product.md  NTF-006-alertmanager-helm-config.md
legacy/notify/docs/tickets/phase-2-control-plane/: NTF-007-daily-digest-real-endpoints.md  NTF-008-bot-status-18-products.md  NTF-009-rate-limit-telegram.md
legacy/notify/docs/tickets/phase-3-beacon-v02/: NTF-010-postal-email-channel.md  NTF-011-multi-pod-distributed-lock.md  NTF-012-clickhouse-event-analytics.md  NTF-013-authentik-consent-management.md  NTF-015-zenvia-sms-channel.md  NTF-016-connect-whatsapp-channel.md
legacy/notify/docs/tickets/phase-4-deploy/: NTF-014-helm-chart-observability.md  NTF-017-apns-fcm-push-mobile.md  NTF-018-vapid-push-web.md  NTF-019-lago-billing-integration.md
legacy/notify/docs/tickets/phase-5-compliance/: NTF-020-audit-trail-anchor-consents.md  NTF-021-lgpd-dsar-flow.md  NTF-022-prometheus-exporter.md  NTF-023-template-bilingue.md
legacy/notify/docs/tickets/phase-9-capability-registry/: NTF-CAP-01-expose-rest-registry.md
legacy/notify/docs/tickets/phase-99-ai-centric/: NTF-AICX-01-central-chat-integration.md
legacy/notify/openapi/: openapi.json  openapi.yaml
legacy/notify/src/rewire_notify/: __init__.py  api.py  daily_digest.py  dev_seed.py  dispatcher.py  kafka_consumer.py  main.py  settings.py
legacy/notify/tests/unit/: test_api.py  test_dispatcher.py
scripts/: dump_openapi.py
tests/: smoke.sh  test_ab_tests.py  test_agents_capabilities.py  test_api_routers_07.py  test_bounce_complaint.py  test_healthz.py  test_load_locust.py  test_messaging_cp_adapters.py  test_messaging_cp_api.py  test_messaging_cp_credits_lago.py  test_messaging_cp_edge_cases.py  test_messaging_cp_queues.py  test_messaging_cp_workers_full.py  test_messaging_unit.py  test_notifications_dispatcher.py  test_rls_isolation.py  test_segments.py  test_smoke_e2e.py
(+112 files in other folders)
