[project]
name = "rewire-beacon"
version = "0.1.0"
description = "Rewire BEACON — Notification platform multi-canal BR (workspace root)"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [
    { name = "Rewire Labs", email = "eng@rewirelabs.dev" },
]

[tool.uv.workspace]
members = ["apps/control-plane"]

[tool.uv.sources]
rewire-beacon-control-plane = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [
    "apps/*/migrations/versions",
    "docs/_archive",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit subset
    "A",   # flake8-builtins
    "DTZ", # flake8-datetimez
    "T20", # flake8-print
    "PT",  # pytest-style
    "SIM", # flake8-simplify
    "TRY", # tryceratops
]
ignore = [
    "E501",   # line length
    "B008",   # FastAPI Depends
    "S101",   # assert in tests
    "TRY003", # long messages
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "PT011"]
"apps/*/migrations/**" = ["E", "F", "I"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]
exclude = [
    "apps/.*/migrations/versions",
]

[[tool.mypy.overrides]]
module = [
    "uvicorn.*",
    "asyncpg.*",
    "structlog.*",
    "prometheus_client.*",
    "opentelemetry.*",
    "alembic.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests", "apps/control-plane/tests"]
asyncio_mode = "auto"
markers = [
    "unit: pure unit tests",
    "integration: integration tests",
]
