[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rewire-beacon-control-plane"
version = "0.1.0"
description = "BEACON control-plane (FastAPI) — V0 skeleton"
readme = "../../README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "Rewire Labs", email = "eng@rewirelabs.dev" }]

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "structlog>=24.1.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.4.0",
  "prometheus-client>=0.20.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "opentelemetry-api>=1.25.0",
  "opentelemetry-sdk>=1.25.0",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "redis>=5.0.0",
  "aiosqlite>=0.20.0",
  # BCN-CAP-01 + BCN-AICX-01: capability registry + agent invoke.
  "PyYAML>=6.0.1",
  "jsonschema>=4.22.0",
  # BCN-101: cross-agent RabbitMQ bus.
  "aio-pika>=9.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.10.0",
  "ruff>=0.4.0",
  "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/beacon"]
