[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rewire-beacon-control-plane"
version = "0.1.0"
description = "BEACON control-plane (FastAPI) — V0 skeleton"
readme = "../../README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "Rewire Labs", email = "eng@rewirelabs.dev" }]

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "structlog>=24.1.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.4.0",
  "prometheus-client>=0.20.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "opentelemetry-api>=1.25.0",
  "opentelemetry-sdk>=1.25.0",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  # RW-MESSAGING-15: OTLP gRPC exporter for Tempo/Jaeger traces.
  "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
  "redis>=5.0.0",
  "aiosqlite>=0.20.0",
  # BCN-CAP-01 + BCN-AICX-01: capability registry + agent invoke.
  "PyYAML>=6.0.1",
  "jsonschema>=4.22.0",
  # BCN-101: cross-agent RabbitMQ bus.
  "aio-pika>=9.4.0",
  # RW-MESSAGING-02/07: real JWT signature validation (ADR0046) via
  # rewire_shared.auth_client.AuthentikJWTValidator — RS256 over JWKS with
  # algorithm pinning (PyJWT, CVE-2024-33663/33664 safe).
  "pyjwt[crypto]>=2.9.0",
  "cryptography>=42.0",
  "rewire-shared>=0.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.10.0",
  "ruff>=0.4.0",
  "httpx>=0.27.0",
]

[project.scripts]
# RW-MESSAGING-14: worker entrypoint; run by a separate Deployment (worker.yaml).
# Set MESSAGING_WORKER_CHANNEL=email|sms|push|retry + MESSAGING_DATABASE_URL.
messaging-worker = "messaging_cp.worker_main:main"

[tool.hatch.build.targets.wheel]
# RW-MESSAGING-08: include messaging_cp so canonical /v1 surface is present
# in the shipped wheel (both beacon legacy routes + messaging_cp canonical
# routes are mounted in main.py:156-162).
packages = ["src/beacon", "src/messaging_cp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
  "unit: fast, isolated unit tests",
]
