[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rewire-notify"
version = "0.1.0"
description = "Rewire internal notification dispatcher (Telegram, V0.1)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Rewire Labs", email = "eng@rewirelabs.dev" }]
keywords = ["rewire", "notify", "telegram", "alertmanager"]

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "structlog>=24.1.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.4.0",
  "prometheus-client>=0.20.0",
  "redpanda-kafka>=0.0.0; sys_platform == 'never'",
  "aiokafka>=0.11.0",
  "temporalio>=1.6.0",
  "apscheduler>=3.10.4",
  "rewire-shared>=0.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "respx>=0.21.0",
  "mypy>=1.10.0",
  "ruff>=0.4.0",
  "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rewire_notify"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
